@@ -187,6 +187,9 @@ Enhancements
     to transfer data from HDF5 file into timestep. (PR #3293)
 
 Changes
+  * `analysis.pca.PCA` class now stores `p_components`, `variance`, 
+    `cumulated_variance` and `mean_atoms` using the 
+    `analysis.base.Results` class (Issues #3275 #3285)
   * Timestep now stores information in 'C' memory layout instead of
     the previous 'F' default (PR #1738)
   * `analysis.rdf.InterRDF` and `analysis.rdf.InterRDF_s` now store
@@ -281,6 +284,11 @@ Changes
   * Added OpenMM coordinate and topology converters (Issue #2863, PR #2917)
 
 Deprecations
+  * The attributes `p_components`, `variance`, `cumulated_variance` and 
+    `mean_atoms` in `analysis.pca.PCA` are now deprecated in favour of 
+    `results.p_components`, `results.variance`, `results.cumulated_variance` 
+    and `results.mean_atoms`. They will be removed in 3.0.0 
+    (Issues #3275 #3285)
   * The `bins`, `edges`, `count`, `rdf` attributes for `analysis.rdf.InterRDF`
     and `analysis.rdf.InterRDF_s`, and `cdf` attributes for
     `analysis.rdf.InterRDF_s` are now deprecated in favour of `results.bins`,
